# RobotDevelopment

./: README.md  app.py  install_webots.ps1  move_robot.py  setup_robot_gui.sh  setup_workspace.ps1  solution_architecture.md
Official_Docs/: RISDK_API_TEMPLATE_ERRORS.txt
competitions_webots/: README.md
competitions_webots/arm1650_config/: package.xml  setup.cfg  setup.py
competitions_webots/arm1650_description/: package.xml  setup.cfg  setup.py
competitions_webots/lamp_package/: package.xml  setup.cfg  setup.py
competitions_webots/robot_control/manipulator_interfaces/: CMakeLists.txt  package.xml
competitions_webots/robot_control/manipulator_interfaces/srv/: GoalPose.srv  GripperCmd.srv  GripperDownPose.srv  SetInt32Array.srv
competitions_webots/simulation_pkg/: package.xml  setup.py
competitions_webots/webots/: package.xml  setup.py
number1/: robot_init.py
number2/: robot_api.py  robot_client.py
number3/: utils.py
number4/: main.py  robot_controller.py  utils.py
number_example/: build.bat  constant.py  demo_sensor.py  example_2__2_cp2112.py  example_3_cp2112.py  robohand.py
robot_commands/: README.md  constants.py  interactive.py  move_down.py  move_up.py
workspace/Documentation/: cameras.txt  main_documentation.md  manipulators.txt  risdk_overview.txt  sensors.txt  servo_controls.txt
workspace/number1/: README.md  config.py
workspace/number2/: robot_gui.py  utils.py
workspace/number3/: main.py
workspace/number4/: README.md  build.bat  build.sh  config.py
workspace/number_example/: README.txt  build.sh  example_1_ch341.py  (+2 more)
(+72 files in other folders)
